Fixed slider bugs in Index.cshtml.  Fixed missing image on register link in Index.cshtml. Maked slider more adaptive

--- a/Programmania/Views/Home/Game.cshtml
+++ b/Programmania/Views/Home/Game.cshtml
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="../Styles/game.css">
-    <link rel="stylesheet" href="../Styles/circle.css">
-    <link rel="stylesheet" href="../Styles/firecircle.css">
+    <link rel="stylesheet" href="~/css/game.css">
+    <link rel="stylesheet" href="~/css/circle.css">
+    <link rel="stylesheet" href="~/css/firecircle.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
             crossorigin="anonymous"></script>
-    <script type="text/javascript" src="../Scripts/circle.js"></script>
+    <script type="text/javascript" src="~/js/circle.js"></script>
     <link rel="stylesheet"
           href="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.1.0/build/styles/default.min.css">
     <script src="//cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.1.0/build/highlight.min.js"></script>
