--- a/Programmania/Views/Home/Index.cshtml
+++ b/Programmania/Views/Home/Index.cshtml
@@ -7,8 +7,8 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="../css/Index.css" />
-    <link rel="stylesheet" href="../css/Slider.css" />
+    <link rel="stylesheet" href="~/css/Index.css" />
+    <link rel="stylesheet" href="~/css/Slider.css" />
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
@@ -287,9 +287,9 @@
     </section>
 
 
-    <script type="application/javascript" src="../js/openModal.js"></script>
-    <script type="application/javascript" src="../js/slider.js"></script>
-    <script type="application/javascript" src="../js/scrollAnimation.js"></script>
+    <script type="application/javascript" src="~/js/openModal.js"></script>
+    <script type="application/javascript" src="~/js/slider.js"></script>
+    <script type="application/javascript" src="~/js/scrollAnimation.js"></script>
 </body>
 
 </html>
