--- a/Programmania/Views/Home/News.cshtml
+++ b/Programmania/Views/Home/News.cshtml
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
 
-    <link rel="stylesheet" href="../Styles/HamburgerMenu.css">
-    <link rel="stylesheet" href="../Styles/News.css">
+    <link rel="stylesheet" href="~/css/HamburgerMenu.css">
+    <link rel="stylesheet" href="~/css/News.css">
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
@@ -74,6 +74,6 @@
         </div>
     </main>
 
-    <script type="text/javascript" src="../Scripts/burger.js"></script>
+    <script type="text/javascript" src="~/js/burger.js"></script>
 </body>
 </html>
