--- a/Programmania/Views/Home/PostNews.cshtml
+++ b/Programmania/Views/Home/PostNews.cshtml
@@ -4,7 +4,7 @@
     <title>Post News</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="../Styles/PostNews.css">
+    <link rel="stylesheet" href="~/css/PostNews.css">
 </head>
 
 <body>
@@ -84,6 +84,6 @@
         </a>
     </div>
     <script src="https://use.fontawesome.com/a31a3f8384.js"></script>
-    <script type="text/javascript" src="../Scripts/postNews.js"></script>
+    <script type="text/javascript" src="~/js/postNews.js"></script>
 </body>
 </html>
