--- a/Programmania/Views/Home/Profile.cshtml
+++ b/Programmania/Views/Home/Profile.cshtml
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="../wwwroot/css/highlight styles/default.min.css">
-    <script src="../wwwroot/js/highlight.min.js"></script>
+    <link rel="stylesheet" href="~/css/highlight styles/default.min.css">
+    <script src="~/js/highlight.min.js"></script>
     <script>hljs.highlightAll();</script>
 
-    <link rel="stylesheet" href="../wwwroot/css/HamburgerMenu.css">
-    <link rel="stylesheet" href="../wwwroot/css/Profile.css">
+    <link rel="stylesheet" href="~/css/HamburgerMenu.css">
+    <link rel="stylesheet" href="~/css/Profile.css">
 
 
 
@@ -279,8 +279,8 @@ namespace Lesson_7__Exceptions_
             </div>
         </div>
     </main>
-    <script type="text/javascript" src="..wwwroot/js/adaptiveProfile.js"></script>
-    <script type="text/javascript" src="..wwwroot/js/burger.js"></script>
+    <script type="text/javascript" src="~/js/adaptiveProfile.js"></script>
+    <script type="text/javascript" src="~/js/burger.js"></script>
 
 
 </body>
