--- a/Programmania/Views/Home/Courses.cshtml
+++ b/Programmania/Views/Home/Courses.cshtml
@@ -4,8 +4,8 @@
     <title>Courses</title>
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../Styles/HamburgerMenu.css" />
-    <link rel="stylesheet" href="../Styles/Courses.css" />
+    <link rel="stylesheet" href="~/css/HamburgerMenu.css" />
+    <link rel="stylesheet" href="~/css/Courses.css" />
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 </head>
@@ -119,6 +119,6 @@
         </div>
     </main>
 
-    <script type="text/javascript" src="../Scripts/burger.js"></script>
+    <script type="text/javascript" src="~/js/burger.js"></script>
 </body>
 </html>																																					
