--- a/Programmania/wwwroot/css/Index.css
+++ b/Programmania/wwwroot/css/Index.css
@@ -86,7 +86,14 @@ body{
 
 }
 
+.image-slider{
+    max-height: 500px;
+}
 
+.swiper-container{
+    width: 100%;
+    height: 100%;
+}
 .xop-section {
     padding: 20px;
     display: flex;
@@ -122,21 +129,21 @@ body{
 .xop-info-image-courses {
     width: 300px;
     height: 200px;
-    background: url("../Images/courseSlider.jpg");
+    background: url("../images/courseSlider.jpg");
     background-size: cover;
 }
 
 .xop-info-image-register {
     width: 300px;
     height: 200px;
-    background: url("../Images/registerImg.jpg.");
+    background: url("../images/registerImg.jpg");
     background-size: cover;
 }
 
 .xop-info-image-login {
     width: 300px;
     height: 200px;
-    background: url("../Images/loginImg.jpg");
+    background: url("../images/loginImg.jpg");
     background-size: cover;
 }
 
@@ -329,6 +336,10 @@ section{
     transform: translate(0px, 0px);
 }
 
+.swiper-scrollbar{
+    height: 10px;
+}
+
 .mainMenu {
     padding: 20px;
     background-color: #31015D;
@@ -349,6 +360,7 @@ section{
         width: 100%;
         height: auto;
     }
+
 }
 
 @media(max-width: 1000px) {
@@ -369,7 +381,4 @@ section{
         margin-top:30px;
     }
 
-    .image-slider{
-        height: 900px;
-    }
 }
