--- a/Programmania/Views/Home/News.cshtml
+++ b/Programmania/Views/Home/News.cshtml
@@ -51,25 +51,32 @@
 
     <main>
         <div class="content">
-            <div class="newsItem">
-                <div class="newsItem__title">
-                    <a href="" class="newsItem__title__body">Example</a>
+            <div class="main">
+                <div class="row"></div>
+            </div>
+            <div class="card mb-3">
+                <h1 class="m-3 titleText">Posts</h1>
+                <div class="card-body">
+                    <div class="newsItem__title">
+                        <a href="" class="newsItem__title__body">Example</a>
+                    </div>
+
+
+
+                    <div class="newsItem__description">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, voluptate, cum? Asperiores eaque sunt iure ut quos sapiente amet mollitia optio, pariatur repudiandae repellat illum, ex deleniti, non. Ducimus, minima!</p>
+                    </div>
+
+                    <div class="newsItem__image">
+                        <img src="../Images/courseSlider.jpg" alt="">
+                    </div>
+
+                    <a href="" class="newsItem__button">
+                        <span class="newsItem__button__text">View more</span>
+                        <span class="newsItem__button__waves"></span>
+                    </a>
                 </div>
 
-
-
-                <div class="newsItem__description">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem, voluptate, cum? Asperiores eaque sunt iure ut quos sapiente amet mollitia optio, pariatur repudiandae repellat illum, ex deleniti, non. Ducimus, minima!</p>
-                </div>
-
-                <div class="newsItem__image">
-                    <img src="../Images/courseSlider.jpg" alt="">
-                </div>
-
-                <a href="" class="newsItem__button">
-                    <span class="newsItem__button__text">View more</span>
-                    <span class="newsItem__button__waves"></span>
-                </a>
             </div>
         </div>
     </main>
