--- a/Programmania/wwwroot/css/Challenges.css
+++ b/Programmania/wwwroot/css/Challenges.css
@@ -1,254 +1,174 @@
-.content {
-	padding: 100px 200px;
+/*Обнуление*/
+
+* {
+    padding: 0;
+    margin: 0;
+    border: 0;
 }
 
-.challengeItem {
-	display: flex;
-	-webkit-display: flex;
-	-moz-display: flex;
-	-ms-display: flex;
-	-o-display: flex;
+    *, *:before, *:after {
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+    }
 
-	flex-direction: row;
-	flex: 1 1 auto;
-	flex-wrap: wrap;
-	justify-content: space-around;
-
-	border: 1px solid #2b0053;
-	background-color: #2b0053;
-	border-radius: 30px;
-	width: 100%;
-	height: 100%;
-	max-width: 1300px;
-	padding: 30px;
+:focus, :active {
+    outline: none;
 }
 
-.challengeItem__user {
-	width: 400px;
-	height: 100%;
+a:focus, a:active {
+    outline: none;
 }
 
-.challengeItem__user__image {
-	width: 200px;
-	height: 200px;
-	border-radius: 50%;
-	overflow: hidden;
-	margin: 0 auto;
+nav, footer, header, aside {
+    display: block;
 }
 
-.challengeItem__user__image img{
-	max-width: 100%;
-	display: block;
+html, body {
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    font-size: 14px;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
 }
 
-.challengeItem__user__info,
-.challengeItem__info {
-	font-family: "mainFont";
-    color: #ffd45f;
-    text-transform: uppercase;
-    letter-spacing: 8px;
-    position: relative;
-    z-index: 1;
-    text-align: center;
-    font-size: 18px;
+input, button, textarea {
+    font-family: inherit;
 }
 
-.challengeItem__info{
-	height: 100%;
+    input::-ms-clear {
+        display: none;
+    }
+
+button {
+    cursor: pointer;
 }
 
-.challengeItem__user__info{
-	margin-top: 20px;
-	margin-left: 30px;
-}
+    button::-moz-focus-inner {
+        padding: 0;
+        border: 0;
+    }
 
-
-.challengeItem__info h3{
-	margin-top: 30px;
-}
-
-.challengeItem__button {
-	 margin: 0 auto;
-	 margin-top: 90px;
-
-    height: 60px;
-    width: 250px;
-    overflow: hidden;
-
-    display: flex;
-    -webkit-display: flex;
-    -moz-display: flex;
-    -ms-display: flex;
-    -o-display: flex;
-
-    transition: all 0.8s ease 0s;
-    justify-content: center;
-    align-items: center;
-    border-radius: 0 0 10px 10px;
+a, a:visited {
     text-decoration: none;
+}
+
+    a:hover {
+        text-decoration: none;
+    }
+
+ul-li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-size: inherit;
+    font-weight: 400;
+}
+
+
+/*--------------------*/
+
+body {
+    margin-top: 20px;
+    background-color: #defafa;
+    font-family: "mainFont";
+}
+
+.content {
+    padding: 10% 5%;
+}
+
+.card {
     position: relative;
+    display: flex;
+    flex-direction: column;
+    border-radius: 40px;
+    padding: 50px;
 }
 
-.challengeItem__button:hover{
-	border-radius: 10px;
-
-    transition: all 0.8s ease 0.2s;
-    -webkit-transition: all 0.8s ease 0.2s;
-    -moz-transition: all 0.8s ease 0.2s;
-    -ms-transition: all 0.8s ease 0.2s;
-    -o-transition: all 0.8s ease 0.2s;
-
-    box-shadow: 0 0 40px rgba(0, 69, 112,0.6);
-    -webkit-box-shadow: 0 0 40px rgba(34, 3, 128,0.6);
+.row {
+    margin-top: 50px;
 }
 
-.challengeItem__button:hover .challengeItem__button__waves{
-	top: -50px;
+.titleText {
+    font-size: 40px;
 }
 
-.challengeItem__button__text {
-	font-family: "mainFont";
-    color: #ffd45f;
-    text-transform: uppercase;
-    letter-spacing: 8px;
-    position: relative;
-    z-index: 1;
-    text-align: center;
+.card-body {
+    font-size: 20px;
 }
 
-.challengeItem__button__waves {
-	position: absolute;
-    width: 250px;
-    height: 250px;
-    top: 0;
-    left: 0;
-    background-color: #004570;
-    box-shadow: inset 0 0 50px rgba(255,255,255,0.5);
 
-    transition: all 0.8s ease 0s;
-    -webkit-transition: all 0.8s ease 0s;
-    -moz-transition: all 0.8s ease 0s;
-    -ms-transition: all 0.8s ease 0s;
-    -o-transition: all 0.8s ease 0s;
+.fixedCard {
+    max-height: 500px;
+    overflow: scroll;
 }
 
-.challengeItem__button__waves:before,
-.challengeItem__button__waves:after{
-	content: '';
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 250%;
-    height: 250%;
-
-    transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    -webkit-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
+.gameResult__btn {
+    background-color: #eee;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 32px;
 }
 
-.challengeItem__button__waves:before{
-	background-color: #2b0053;
-    border-radius: 48%;
-
-    animation: waves 5s infinite linear;
-    -webkit-animation: waves 5s infinite linear;
-    -moz-animation: waves 5s infinite linear;
-    -o-animation: waves 5s infinite linear;
+.gameResult__btn__win {
+    color: green;
 }
 
-.challengeItem__button__waves:after{
-	background-color: rgba(43,0,83,0.5);
-    border-radius: 44%;
-
-    animation: waves 10s infinite linear;
-    -webkit-animation: waves 10s infinite linear;
-    -moz-animation: waves 10s infinite linear;
-    -o-animation: waves 10s infinite linear;
+.gameResult__btn__lose {
+    color: #ad0000;
 }
 
-@keyframes waves{
-    0%{
-        transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -webkit-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
+.gameResult__btn:after {
+    content: '\02795';
+    font-size: 15px;
+    color: white;
+    float: right;
+    margin-left: 5px;
+}
+
+.active:after {
+    content: '\2796';
+}
+
+.active .gameResult:hover {
+    background-color: #ccc;
+}
+
+.gameResult__content {
+    padding: 0 18px;
+    max-height: 0;
+    overflow: hidden;
+    background-color: #f1f1f1;
+    transition: max-height 0.2s ease 0s;
+    font-family: "mainFont";
+    font-size: 30px;
+}
+
+.personalStates {
+    font-size: 30px;
+    color: #2b0053;
+    letter-spacing: 3px;
+}
+
+@media(max-width: 320px) {
+    .content {
+        padding: 10% 2%;
     }
 
-    100%{
-        transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -moz-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -ms-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -webkit-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -o-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
+    .card {
+        padding: 20px;
     }
-}
-
-@-webkit-keyframes waves{
-    0%{
-        transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -webkit-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    }
-
-    100%{
-        transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -moz-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -ms-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -webkit-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -o-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-    }
-}
-
-@-moz-keyframes waves{
-    0%{
-        transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -webkit-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    }
-
-    100%{
-        transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -moz-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -ms-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -webkit-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -o-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-    }
-}
-
-@-o-keyframes waves{
-    0%{
-        transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -webkit-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-        -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    }
-
-    100%{
-        transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -moz-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -ms-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -webkit-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-        -o-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
-    }
-}
-
-@media(max-width: 750px){
-	.content{
-		padding: 100px;
-	}
-}
-
-@media(max-width: 450px) {
-	.challengeItem{
-		flex: 0 0 auto;
-		width: 250px;
-	}
 }
