--- a/Programmania/wwwroot/css/News.css
+++ b/Programmania/wwwroot/css/News.css
@@ -1,30 +1,30 @@
 /*Обнуление*/
 
-*{
+* {
     padding: 0;
     margin: 0;
     border: 0;
 }
 
-*,*:before,*:after{
-    -moz-box-sizing: border-box;
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-}
+    *, *:before, *:after {
+        -moz-box-sizing: border-box;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+    }
 
-:focus, :active{
+:focus, :active {
     outline: none;
 }
 
-a:focus, a:active{
+a:focus, a:active {
     outline: none;
 }
 
-nav,footer,header,aside{
+nav, footer, header, aside {
     display: block;
 }
 
-html,body{
+html, body {
     height: 100%;
     width: 100%;
     font-size: 100%;
@@ -35,110 +35,129 @@ html,body{
     -webkit-text-size-adjust: 100%;
 }
 
-input,button,textarea{
+input, button, textarea {
     font-family: inherit;
 }
 
-input::-ms-clear{
-    display: none;
-}
+    input::-ms-clear {
+        display: none;
+    }
 
-button{
+button {
     cursor: pointer;
 }
 
-button::-moz-focus-inner{
-    padding: 0;
-    border: 0;
-}
+    button::-moz-focus-inner {
+        padding: 0;
+        border: 0;
+    }
 
-a, a:visited{
+a, a:visited {
     text-decoration: none;
 }
 
-a:hover{
-    text-decoration: none;
-}
+    a:hover {
+        text-decoration: none;
+    }
 
-ul-li{
+ul-li {
     list-style: none;
 }
 
-img{
+img {
     vertical-align: top;
 }
 
-h1,h2,h3,h4,h5,h6{
+h1, h2, h3, h4, h5, h6 {
     font-size: inherit;
     font-weight: 400;
 }
 
 
 /*--------------------*/
+@font-face {
+    font-family: 'mainFont';
+    src: url("../Fonts/Font2.ttf");
+}
 
+
+body {
+    margin-top: 20px;
+    background-color: #defafa;
+    font-family: "mainFont";
+}
 
 .content {
-	padding: 200px;
+    padding: 10% 5%;
 }
 
-.newsItem {
-	border: 1px solid #2b0053;
-	width: 100%;
-	height: 100%;
-	max-height: 1500px;
-	padding: 50px;
+
+
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border-radius: 40px;
+    background-color: white;
+    padding: 50px;
 }
 
-.newsItem__title 
-{
-	text-align: center;
+
+.titleText {
+    font-size: 40px;
+}
+
+.card-body {
+    font-size: 20px;
+}
+
+.newsItem__title {
+    text-align: center;
 }
 
 .newsItem__title__body {
-	margin: 0 auto;
-	text-align: center;
-	font-size: 42px;
-	color: #2b0053;
-	text-decoration: none;
-	transition: 0.5s ease 0s
+    margin: 0 auto;
+    text-align: center;
+    font-size: 42px;
+    color: #2b0053;
+    text-decoration: none;
+    transition: 0.5s ease 0s
 }
 
-.newsItem__title__body:hover{
-	color: #ffd45f;
-}
+    .newsItem__title__body:hover {
+        color: #ffd45f;
+    }
 
 .newsItem__description {
-	margin-top: 20px;
-	font-size: 24px;
-	text-decoration: none;
+    margin-top: 20px;
+    font-size: 24px;
+    text-decoration: none;
 }
 
 .newsItem__image {
     margin: 0 auto;
-	margin-top: 30px;
-	max-width: 900px;
-	max-height: 600px;
+    margin-top: 30px;
+    max-width: 900px;
+    max-height: 600px;
 }
 
-.newsItem__image img{
-	max-width: 100%;
-}
+    .newsItem__image img {
+        max-width: 100%;
+    }
 
 .newsItem__button {
-	margin: 0 auto;
-	margin-top: 50px;
+    margin: 0 auto;
+    margin-top: 50px;
     margin-bottom: 20px;
-
     height: 60px;
-    width: 250px;
+    max-width: 250px;
+    width: 100%;
     overflow: hidden;
-
     display: flex;
     -webkit-display: flex;
     -moz-display: flex;
     -ms-display: flex;
     -o-display: flex;
-
     transition: all 0.8s ease 0s;
     justify-content: center;
     align-items: center;
@@ -147,25 +166,23 @@ h1,h2,h3,h4,h5,h6{
     position: relative;
 }
 
-.newsItem__button:hover{
-	border-radius: 10px;
+    .newsItem__button:hover {
+        border-radius: 10px;
+        transition: all 0.8s ease 0.2s;
+        -webkit-transition: all 0.8s ease 0.2s;
+        -moz-transition: all 0.8s ease 0.2s;
+        -ms-transition: all 0.8s ease 0.2s;
+        -o-transition: all 0.8s ease 0.2s;
+        box-shadow: 0 0 40px rgba(43, 0, 83,0.6);
+        -webkit-box-shadow: 0 0 40px rgba(43, 0, 83,0.6);
+    }
 
-    transition: all 0.8s ease 0.2s;
-    -webkit-transition: all 0.8s ease 0.2s;
-    -moz-transition: all 0.8s ease 0.2s;
-    -ms-transition: all 0.8s ease 0.2s;
-    -o-transition: all 0.8s ease 0.2s;
-
-    box-shadow: 0 0 40px rgba(43, 0, 83,0.6);
-    -webkit-box-shadow: 0 0 40px rgba(43, 0, 83,0.6);
-}
-
-.newsItem__button:hover .newsItem__button__waves{
-	top: -50px;
-}
+        .newsItem__button:hover .newsItem__button__waves {
+            top: -50px;
+        }
 
 .newsItem__button__text {
-	font-family: "mainFont";
+    font-family: "mainFont";
     color: #ffd45f;
     text-transform: uppercase;
     letter-spacing: 8px;
@@ -175,14 +192,13 @@ h1,h2,h3,h4,h5,h6{
 }
 
 .newsItem__button__waves {
-	position: absolute;
+    position: absolute;
     width: 250px;
     height: 250px;
     top: 0;
     left: 0;
     background-color: #2b0053;
     box-shadow: inset 0 0 50px rgba(255,255,255,0.5);
-
     transition: all 0.8s ease 0s;
     -webkit-transition: all 0.8s ease 0s;
     -moz-transition: all 0.8s ease 0s;
@@ -190,46 +206,14 @@ h1,h2,h3,h4,h5,h6{
     -o-transition: all 0.8s ease 0s;
 }
 
-.newsItem__button__waves:before,
-.newsItem__button__waves:after{
-	content: '';
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 250%;
-    height: 250%;
-
-    transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    -webkit-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-    -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
-}
-
-.newsItem__button__waves:before{
-	background-color: #fff;
-    border-radius: 48%;
-
-    animation: waves 5s infinite linear;
-    -webkit-animation: waves 5s infinite linear;
-    -moz-animation: waves 5s infinite linear;
-    -o-animation: waves 5s infinite linear;
-}
-
-.newsItem__button__waves:after{
-	background-color: rgba(255,255,255,0.5);
-    border-radius: 44%;
-
-    animation: waves 10s infinite linear;
-    -webkit-animation: waves 10s infinite linear;
-    -moz-animation: waves 10s infinite linear;
-    -o-animation: waves 10s infinite linear;
-}
-
-
-
-@keyframes waves{
-    0%{
+    .newsItem__button__waves:before,
+    .newsItem__button__waves:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 50%;
+        width: 250%;
+        height: 250%;
         transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
         -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
         -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
@@ -237,7 +221,36 @@ h1,h2,h3,h4,h5,h6{
         -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
     }
 
-    100%{
+    .newsItem__button__waves:before {
+        background-color: #fff;
+        border-radius: 48%;
+        animation: waves 5s infinite linear;
+        -webkit-animation: waves 5s infinite linear;
+        -moz-animation: waves 5s infinite linear;
+        -o-animation: waves 5s infinite linear;
+    }
+
+    .newsItem__button__waves:after {
+        background-color: rgba(255,255,255,0.5);
+        border-radius: 44%;
+        animation: waves 10s infinite linear;
+        -webkit-animation: waves 10s infinite linear;
+        -moz-animation: waves 10s infinite linear;
+        -o-animation: waves 10s infinite linear;
+    }
+
+
+
+@keyframes waves {
+    0% {
+        transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
+        -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
+        -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
+        -webkit-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
+        -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
+    }
+
+    100% {
         transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
         -moz-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
         -ms-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
@@ -246,8 +259,8 @@ h1,h2,h3,h4,h5,h6{
     }
 }
 
-@-webkit-keyframes waves{
-    0%{
+@-webkit-keyframes waves {
+    0% {
         transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
         -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
         -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
@@ -255,7 +268,7 @@ h1,h2,h3,h4,h5,h6{
         -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
     }
 
-    100%{
+    100% {
         transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
         -moz-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
         -ms-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
@@ -264,8 +277,8 @@ h1,h2,h3,h4,h5,h6{
     }
 }
 
-@-moz-keyframes waves{
-    0%{
+@-moz-keyframes waves {
+    0% {
         transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
         -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
         -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
@@ -273,7 +286,7 @@ h1,h2,h3,h4,h5,h6{
         -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
     }
 
-    100%{
+    100% {
         transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
         -moz-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
         -ms-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
@@ -282,8 +295,8 @@ h1,h2,h3,h4,h5,h6{
     }
 }
 
-@-o-keyframes waves{
-    0%{
+@-o-keyframes waves {
+    0% {
         transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
         -moz-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
         -ms-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
@@ -291,7 +304,7 @@ h1,h2,h3,h4,h5,h6{
         -o-transform: translate3d(-50%,-96%,0) rotate(0deg) scale(1);
     }
 
-    100%{
+    100% {
         transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
         -moz-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
         -ms-transform: translate3d(-50%,-96%,0) rotate(360deg) scale(1);
@@ -301,27 +314,8 @@ h1,h2,h3,h4,h5,h6{
 }
 
 
-@media(max-width: 977px)
-{
-    .content{
-        padding: 100px;
-    }
-}
-
-@media(max-width: 580px) {
-    .newsItem__button{
-        width: 150px;
-    }
-}
-
-@media(max-width: 430px) {
-    .newsItem{
-        padding: 20px;
-    }
-}
-
-@media(max-width: 750px) {
-    .content{
-        padding: 50px;
+@media(max-width: 320px) {
+    .content {
+        padding: 10% 2%;
     }
 }
