--- a/Programmania/wwwroot/css/Index.css
+++ b/Programmania/wwwroot/css/Index.css
@@ -71,7 +71,12 @@ h1,h2,h3,h4,h5,h6{
     font-weight: 400;
 }
 
-
+.error {
+    padding-left: 20px;
+    color: red;
+    font-size: 15px;
+    text-align: end;
+}
 
 
 
